# trunkdefectclassification

./: README
Centerline/: BSplines.h  Centerline.cpp  Centerline.h  CenterlineHelper.h  CenterlineMultiCore.cpp  CenterlineMultiCore.h  Regression.h  SimpleNormalAccumulator.cpp  SimpleNormalAccumulator.h
Classification/: CMakeLists.txt  Classify.cpp  ComputeFeatureFromXyz.cpp  DefectClassification.cpp  TestFeature.cpp  TestLearningRF.cpp
Common/: CylindricalCoordinateSystem.cpp  CylindricalCoordinateSystem.h  CylindricalPoint.h  Defect.h  DefectType.h  IOHelper.cpp  IOHelper.h  Regression.h  RlzPoint.h  Rosin.h  Statistic.cpp  Statistic.h
Feature/: Classifier.h  ClassifierSVM.cpp  ClassifierSVM.h  Constants.h  CylindricalConversion.cpp  CylindricalConversion.h  Descripteur3D.cpp  Descripteur3D.h  DimensionFeatures.h  EFSFeatures.cpp  EFSFeatures.h  FPFHFeature.h  FeatureExtraction.cpp  FeatureExtraction.h  FeatureExtractionXyz.cpp  FeatureExtractionXyz.h  LearningRF.cpp  LearningRF.h  LearningSVM.h  MomentCylindrical.cpp  MomentCylindrical.h  Moments3D.cpp  Moments3D.h  Pca.h  PredictRF.cpp  PredictRF.h  testMoments.cpp
NoiseProcess/: CMakeLists.txt  RLimite.cpp  RemoveBigFaces.cpp  RemoveNoise.cpp  RemovePlane.cpp  RemoveSectorNoise.cpp  RemoveSmallClusters.cpp  RemoveSmallClustersPC.cpp  SubSample.cpp
Quantification/: CMakeLists.txt  DefectQuantification.cpp  DefectQuantification.h  characterizeBranch.cpp  characterizeScar.cpp
Segmentation/: DefectBranchSegmentation.cpp  DefectBranchSegmentation.h  DefectSegmentation.cpp  DefectSegmentation.h  EuclideCluster.h  SegmentationAbstract.cpp  SegmentationAbstract.h  SegmentationHelper.h  TrunkDefectSegmentation.cpp
data/: readme.txt
data/trainingdata/: readme.txt
data/trainingdata/centerline/beech1/: centerline.xyz  radius
data/trainingdata/centerline/beech103/: centerline.xyz  radius
data/trainingdata/centerline/beech2/: centerline.xyz  radius
data/trainingdata/centerline/beech7/: centerline.xyz  radius
data/trainingdata/centerline/beech8/: centerline.xyz  radius
data/trainingdata/centerline/beech9/: centerline.xyz  radius
data/trainingdata/centerline/fir1/: centerline.xyz  radius
data/trainingdata/centerline/fir3/: centerline.xyz  radius
data/trainingdata/centerline/oak0/: centerline.xyz  radius
data/trainingdata/centerline/oak1/: centerline.xyz  radius
data/trainingdata/centerline/oak2/: centerline.xyz  radius
data/trainingdata/centerline/oak4/: centerline.xyz  radius
data/trainingdata/centerline/oak5/: centerline.xyz  radius
data/trainingdata/centerline/oak613/: centerline.xyz  radius
data/trainingdata/centerline/oak8/: centerline.xyz  radius
data/trainingdata/centerline/pine2/: centerline.xyz  radius
data/trainingdata/centerline/wildservicetree2/: centerline.xyz  radius
data/trainingdata/centerline/wildservicetree4/: centerline.xyz  radius
data/trainingdata/data/beech1/: beech1-1-br2.xyz  beech1-10-br.xyz  beech1-1000-ec.xyz  beech1-1001-ec.xyz  beech1-1002-ec.xyz  beech1-1003-ec.xyz  beech1-101-unk.xyz  beech1-102-unk.xyz  beech1-103-unk.xyz  beech1-105-br2.xyz  beech1-106-br2.xyz  beech1-107-br2.xyz  beech1-107-unk.xyz  beech1-107b-br2.xyz  beech1-108-br2.xyz  beech1-109-am.xyz  beech1-109b-am.xyz  beech1-11-br2.xyz  beech1-110-unk.xyz  beech1-111-unk.xyz  beech1-112-br2.xyz  beech1-113-br.xyz  beech1-114-br.xyz  beech1-115-unk.xyz  beech1-116-br2.xyz  beech1-117-br.xyz  beech1-118-br.xyz  beech1-119-br.xyz  beech1-12-br2.xyz  beech1-120-unk.xyz  beech1-121-unk.xyz  beech1-122-unk.xyz  beech1-123-br2.xyz  beech1-123b-br2.xyz  beech1-124-unk.xyz  beech1-125-unk.xyz  beech1-13-un.xyz  beech1-14-br2.xyz  beech1-15-gm.xyz  beech1-16-br2.xyz  (+11 more)
data/trainingdata/data/beech103/: .qglviewer.xml  beech103-1-ci.xyz  beech103-10-ci.xyz  beech103-1001-ec.xyz  beech103-1002-ec.xyz  beech103-101-ci.ply  beech103-11-ci.xyz  beech103-12-ci.xyz  beech103-13-ci.xyz  beech103-14-ci.xyz  beech103-15-ci.xyz  beech103-16-ci.xyz  beech103-17-ci.xyz  beech103-18-ci.xyz  beech103-19-ci.xyz  beech103-2-ci.xyz  beech103-20-ci.xyz  beech103-201-ci.xyz  beech103-21-ci.xyz  beech103-22-ci.xyz  beech103-221-ci.xyz  beech103-23-ci.xyz  beech103-24-ci.xyz  beech103-241-ci.xyz  beech103-25-ci.xyz  beech103-26-ci.xyz  beech103-261-ci.xyz  beech103-27-ci.xyz  beech103-28-ci.xyz  beech103-281-ci.xyz  beech103-29-ci.xyz  beech103-3-ci.xyz  beech103-30-sp.xyz  beech103-31-sp.xyz  beech103-4-ci.xyz  beech103-5-sp.xyz  beech103-6-ci.xyz  beech103-7-ci.xyz  beech103-8-ci.xyz  beech103-9-ci.xyz  (+33 more)
data/trainingdata/data/beech2/: beech2-1-am.off  beech2-1-am.xyz  beech2-1-br.off  beech2-1-br.xyz  beech2-1-bra.off  beech2-1-bra.xyz  beech2-1-ci.off  beech2-10-br.off  beech2-10-br.xyz  beech2-101-br2.off  beech2-101-br2.xyz  beech2-102-unk.off  beech2-102-unk.xyz  beech2-103-unk.off  beech2-103-unk.xyz  beech2-104-br.off  beech2-104-br.xyz  beech2-105-unk.off  beech2-105-unk.xyz  beech2-106-unk.off  beech2-106-unk.xyz  beech2-107-unk.off  beech2-107-unk.xyz  beech2-11-br.off  beech2-11-br.xyz  beech2-12-br.off  beech2-12-br.xyz  beech2-13-br.off  beech2-13-br.xyz  beech2-14-br.off  beech2-14-br.xyz  beech2-15-br.off  beech2-15-br.xyz  beech2-16-br.off  beech2-16-br.xyz  beech2-2-am.off  beech2-2-am.xyz  beech2-2-br.off  beech2-2-br.xyz  beech2-2-bra.off  (+39 more)
data/trainingdata/data/beech6/: .qglviewer.xml  beech6-1-bra.xyz  beech6-1-ci.xyz  beech6-100-sp.xyz  beech6-2-bra.xyz  beech6-2-ci.xyz  beech6-21-bra.xyz  beech6-3-ci.xyz  beech6-4-ci.xyz  beech6-5-ci.xyz
data/trainingdata/data/beech7/: beech7-1-bra.xyz  beech7-1-ci.xyz  beech7-1001-sp.xyz  beech7-10010-sp.xyz  beech7-10011-sp.xyz  beech7-10012-sp.xyz  beech7-1002-sp.xyz  beech7-1003-sp.xyz  beech7-1004-sp.xyz  beech7-1005-sp.xyz  beech7-1006-sp.xyz  beech7-1007-sp.xyz  beech7-1008-sp.xyz  beech7-1009-sp.xyz  beech7-2-bra.xyz  beech7-2-ci.xyz  beech7-4-ci.xyz  beech7-5-ci.xyz  beech7-6-ci.xyz  beech7-7-ci.xyz  beech7-8-ci.xyz
data/trainingdata/data/beech9/: beech9-1-gm.xyz  beech9-10-gm.xyz  beech9-100-ci.xyz  beech9-101-gm.xyz  beech9-11-gm.xyz  beech9-12-gm.xyz  (+23 more)
(+465 files in other folders)
